--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -1,16 +1,27 @@
 "ButtonsTitle" = "Buttons";
+"ButtonsExplain" = "Various uses of UIButton";
 "ControlsTitle" = "Controls";
+"ControlsExplain" = "Various uses of UIControl";
 "TextFieldTitle" = "TextFields";
+"TextFieldExplain" = "Uses of UITextField";
 "SearchBarTitle" = "SearchBar";
+"SearchBarExplain" = "Use of UISearchBar";
 "TextViewTitle" = "TextView";
+"TextViewExplain" = "Use of UITextField";
 "SegmentTitle" = "Segment";
+"SegmentExplain" = "Various uses of UISegmentedControl";
 "ToolbarTitle" = "Toolbar";
+"ToolbarExplain" = "Uses of UIToolbar";
 "PickerTitle" = "Pickers";
+"PickerExplain" = "Uses of UIDatePicker, UIPickerView";
 "ImagesTitle" = "Images";
+"ImagesExplain" = "Use of UIImageView";
 "WebTitle" = "Web";
+"WebExplain" = "Use of UIWebView";
 "AlertTitle" = "Alerts";
+"AlertExplain" = "Various uses of UIAlertView, UIActionSheet";
 "TransitionsTitle" = "Transitions";
-"AboutTitle" = "About";
+"TransitionsExplain" = "Shows UIViewAnimationTransitions";
 
 "StartTitle" = "Start";
 "StopTitle" = "Stop";
